Replace Java 21-only library calls with Java 17 equivalents (S5)
Backport seam S5 (D9). The 1.20.1 port runs on Java 17, so these calls would
otherwise be rewritten on that branch and stay a permanent per-branch diff.

- List#getFirst() -> get(0): 19 sites in 11 files (including 3 in the shared
  gametests). Every receiver is a List.
- Math.clamp -> Mth.clamp: 7 sites. Mth has the int, float and double
  overloads on 26.1.2, 1.21.1 and 1.20.1, and they agree with Math.clamp for
  every value these sites can pass.
- RenderBuffersMixin: the fixedBuffers local is declared as Map, not
  SequencedMap. BufferSourceAccessor keeps SequencedMap, because Mixin matches
  an @Accessor's target field by descriptor, and the field is a SequencedMap
  on 26.1.2 and 1.21.1.

Pass 2's N7 count overstated the work. All 13 reversed() hits are
Comparator#reversed (Java 8), the addFirst/addLast/removeFirst hits are on a
Deque or are MC/Fabric API methods, and McpTokenAuth's getFirst is
com.sun.net.httpserver.Headers. None of those change.

No behaviour change.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015ffptsJr3o3fhDcVHooSeF