@@ -202,7 +202,7 @@ public final class TankGroups {
     private static Group ofMembers(Set<BlockPos> visited, Level level) {
         List<BlockPos> members = new ArrayList<>(visited);
         Collections.sort(members);
-        BlockPos anchor = members.getFirst();
+        BlockPos anchor = members.get(0);
 
         int minX = Integer.MAX_VALUE, minY = Integer.MAX_VALUE, minZ = Integer.MAX_VALUE;
         int maxX = Integer.MIN_VALUE, maxY = Integer.MIN_VALUE, maxZ = Integer.MIN_VALUE;
